@@ -336,9 +336,26 @@ abstract class JHtmlSelect
 	 */
 	public static function optgroup($text, $optKey = 'value', $optText = 'text')
 	{
-		$obj = new stdClass;
-		$obj->$optKey = '<OPTGROUP>';
-		$obj->$optText = $text;
+		// Set initial state
+		static $state = 'open';
+
+		// Toggle between open and close states:
+		switch($state)
+		{
+			case 'open':
+				$obj = new stdClass;
+				$obj->$optKey = '<OPTGROUP>';
+				$obj->$optText = $text;
+				$state = 'close';
+				break;
+			case 'close':
+				$obj = new stdClass;
+				$obj->$optKey = '</OPTGROUP>';
+				$obj->$optText = $text;
+				$state = 'open';
+				break;
+		}
+
 		return $obj;
 	}
 
