@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+02-Aug-2010 Andrew Eddie
+ # Fixed issue [#21545] </optgroup> is not generated for menu items admin page (Franklin Tse, Omar Ramos).
+
  1-Aug-2010 Ron Severdia
 ^ [# 21368] Changed alignment of column items
 ^ Fixed CSS ordering for BlueStork (table styles out of place)
